Create DTO filter to implements filters in thymeleaf.