@@ -1,18 +1,16 @@
 package com.mtb.demo.service;
 
+import java.util.Collection;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
+import com.mtb.demo.dto.ProductDTO;
+import com.mtb.demo.dto.ProductFilterDto;
 import com.mtb.demo.entity.Kit;
 import com.mtb.demo.entity.Product;
 import com.mtb.demo.mapper.KitProductMapper;
-import com.mtb.demo.repository.GenderRepository;
+import com.mtb.demo.mapper.ProductDtoMapper;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -21,15 +19,15 @@ import org.springframework.stereotype.Service;
 public class KitService {
 
 	private final ProductService productService;
-	private final GenderRepository genderRepository;
 	private final KitProductMapper kitProductMapper;
+	private final ProductDtoMapper productDtoMapper;
 
-	public Page<Kit> getProductByGender(Set<String> genders, Pageable pageable) {
-		Page<Product> productByGenders = productService.getProductByGenders(genderRepository.findDistinctByCodeIn(genders), pageable);
-		List<Kit> kits = productByGenders.getContent().stream()
+	public List<ProductDTO> getProductByProductFilter(ProductFilterDto productFilterDto) {
+		final Collection<String> genders = productFilterDto.getSelectedGenderFilters().stream().toList();
+		final Collection<Product> productByGenders = productService.getProductByGenders(genders.toArray(String[]::new));
+		final List<Kit> kits = productByGenders.stream()
 				.map(kitProductMapper::mapTo)
-				.collect(Collectors.toList());
-		return new PageImpl<>(kits, pageable, productByGenders.getTotalElements());
+				.toList();
+		return productDtoMapper.mapToProductDtos(kits);
 	}
-
 }
